Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/JobExecution__c.object-meta.xml
<CustomObject>
    <label>Job Execution</label>
    <nameField>
        <displayFormat>JE-{000}</displayFormat>
        <label>Job Execution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>