Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/Callback__c.field-meta.xml
<CustomField>
    <fullName>Callback__c</fullName>
    <description>An apex class that must implement copado.JobExecutionCallback interface.</description>
    <inlineHelpText>An apex class that must implement copado.JobExecutionCallback interface.</inlineHelpText>
    <label>Callback</label>
    <length>255</length>
    <type>Text</type>
</CustomField>