Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/Commit__c.field-meta.xml
<CustomField>
    <fullName>Commit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commit</label>
    <referenceTo>Git_Commit__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>Job_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>