Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/DataJson__c.field-meta.xml
<CustomField>
    <fullName>DataJson__c</fullName>
    <label>DataJson</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>