Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/Deployment__c.field-meta.xml
<CustomField>
    <fullName>Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment</label>
    <referenceTo>Deployment__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>JobExecutions</relationshipName>
    <type>Lookup</type>
</CustomField>