Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <formula>IF(NOT(ISBLANK( Deployment__c )), Deployment__c, 
    IF(NOT(ISBLANK( Promotion__c )), Promotion__c, 
        IF(NOT(ISBLANK( UserStoryCommit__c )), UserStoryCommit__c, 
            IF(NOT(ISBLANK( Snapshot__c )), Snapshot__c,  ParentRecord_Id__c)
        )
    )
)</formula>
    <label>Parent Id(Formula)</label>
    <type>Text</type>
</CustomField>