Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/ParentRecord_Id__c.field-meta.xml
<CustomField>
    <fullName>ParentRecord_Id__c</fullName>
    <label>Parent Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>