Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Snapshot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Snapshot</label>
    <referenceTo>Git_Backup__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>Job_Executions</relationshipName>
    <type>Lookup</type>
</CustomField>