Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Template</label>
    <referenceTo>JobTemplate__c</referenceTo>
    <relationshipLabel>Job Executions</relationshipLabel>
    <relationshipName>JobExecutions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>