Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/fields/VolumeOptions__c.field-meta.xml
<CustomField>
    <fullName>VolumeOptions__c</fullName>
    <label>VolumeOptions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>