Dummy_Package_for_scratch_org/main/default/objects/JobExecution__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Template__c</columns>
    <columns>Status__c</columns>
    <columns>Source__c</columns>
    <columns>Destination__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>